add 3 types of aging on UI

--- a/tools/static/tools/css/user_style.css
+++ b/tools/static/tools/css/user_style.css
@@ -48,4 +48,10 @@
         border: 1px solid #aaaaaa;
         padding: 1em;
     }
+    .highlight {
+        font-style: italic;
+        color: #D14;
+        text-decoration: none;
+        background-color: yellow;
+    }
 }
