--- a/tools/static/tools/views/aps.html
+++ b/tools/static/tools/views/aps.html
@@ -53,18 +53,18 @@
         </span>
       </td>
       <td>
-        <span ng-class="!isNumber(ap.aging) || ap.aging >= 30 ? 'highlight' : ''">
-          {{ isNumber(ap.aging) && ap.aging >= 0 ? ap.aging : 'Null' }}
+        <span ng-class="!isNumber(ap.ping_aging) || ap.ping_aging >= 30 ? 'highlight' : ''">
+          {{ isNumber(ap.ping_aging) && ap.ping_aging >= 0 ? ap.ping_aging : 'Null' }}
         </span>
       </td>
       <td>
-        <span ng-class="!isNumber(ap.aging) || ap.aging >= 600 ? 'highlight' : ''">
-          {{ isNumber(ap.aging) && ap.aging >= 0 ? ap.aging : 'Null' }}
+        <span ng-class="!isNumber(ap.ping_aging) || ap.ping_aging >= 600 ? 'highlight' : ''">
+          {{ isNumber(ap.ping_aging) && ap.ping_aging >= 0 ? ap.ping_aging : 'Null' }}
         </span>
       </td>
       <td>
-        <span ng-class="!isNumber(ap.aging) || ap.aging >= 30 ? 'highlight' : ''">
-          {{ isNumber(ap.aging) && ap.aging >= 0 ? ap.aging : 'Null' }}
+        <span ng-class="!isNumber(ap.ping_aging) || ap.ping_aging >= 30 ? 'highlight' : ''">
+          {{ isNumber(ap.ping_aging) && ap.ping_aging >= 0 ? ap.ping_aging : 'Null' }}
         </span>
       </td>
       <td style="white-space: nowrap">
