fix bug: checkIp, allow null

--- a/tools/static/tools/views/aps.html
+++ b/tools/static/tools/views/aps.html
@@ -43,7 +43,7 @@
         </span>
       </td>
       <td>
-        <span editable-text="ap.ip" e-name="ip" e-form="rowform" onbeforesave="checkIp($data, ap)">
+        <span editable-text="ap.ip" e-name="ip" e-form="rowform" onbeforesave="checkIp($data)">
           {{ ap.ip || 'empty' }}
         </span>
       </td>
