--- a/tools/static/tools/views/aps.html
+++ b/tools/static/tools/views/aps.html
@@ -53,18 +53,18 @@
         </span>
       </td>
       <td>
-        <span ng-class="!isNumber(ap.ping_aging) || ap.ping_aging >= 60 ? 'highlight' : ''">
-          {{ isNumber(ap.ping_aging) && ap.ping_aging >= 0 ? ap.ping_aging : 'Null' }}
+        <span ng-class="!isString(ap.ping_aging) || !ap.ping_aging.startsWith('00h') ? 'highlight' : ''">
+          {{ isString(ap.ping_aging) ? ap.ping_aging : 'Null' }}
         </span>
       </td>
       <td>
-        <span ng-class="!isNumber(ap.scan_aging) || ap.scan_aging >= 60 ? 'highlight' : ''">
-          {{ isNumber(ap.scan_aging) && ap.scan_aging >= 0 ? ap.scan_aging : 'Null' }}
+        <span ng-class="!isString(ap.scan_aging) || !ap.scan_aging.startsWith('00h') ? 'highlight' : ''">
+          {{ isString(ap.scan_aging) ? ap.scan_aging : 'Null' }}
         </span>
       </td>
       <td>
-        <span ng-class="!isNumber(ap.connect_aging) || ap.connect_aging >= 60 ? 'highlight' : ''">
-          {{ isNumber(ap.connect_aging) && ap.connect_aging >= 0 ? ap.connect_aging : 'Null' }}
+        <span ng-class="!isString(ap.connect_aging) || !ap.connect_aging.startsWith('00h') ? 'highlight' : ''">
+          {{ isString(ap.connect_aging) ? ap.connect_aging : 'Null' }}
         </span>
       </td>
       <td style="white-space: nowrap">
