--- a/tools/templates/tools/base.html
+++ b/tools/templates/tools/base.html
@@ -10,9 +10,9 @@
         <link href="/static/tools/css/user_style.css" rel="stylesheet">
         <link href="/static/tools/css/xeditable.min.css" rel="stylesheet">
         <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-        <script src="/static/tools/js/angular-1.6.9/angular.min.js"></script>
+        <script src="/static/tools/js/angular-1.6.9/angular.js"></script>
         <script src="/static/tools/js/angular-1.6.9/angular-route.min.js"></script>
-        <script src="/static/tools/js/xeditable.min.js"></script>
+        <script src="/static/tools/js/xeditable.js"></script>
     </head>
     
     <body>
